# format-clarity

./: ClarityEvaluation.ipynb  ClarityTuning (1) (2).ipynb  Clarity_GRPO.ipynb  Eva_4B_Inference.ipynb  Nemotron_3_Nano_30B_A3B_A100.ipynb  Nemotron_Clarity_Training.ipynb  Qwen3_(14B)_Alpaca.ipynb  Qwen3_(14B)_Alpaca_MTL.ipynb  Qwen3_(4B)_GRPO.ipynb  add_think_tags.py  auto_batch.py  baseline_detailed_results.csv  baseline_predictions.csv  clarity_eval_predictions_noncot.csv  claude_prompt_50_examples.txt  claude_prompt_50_messages.json  claude_prompt_50_qa.txt  convert_eval_to_parquet.py  cosine_similarity_analysis.py  create_claude_messages.py  evaluate_baseline.py  evaluate_difficulty.ipynb  evaluate_difficulty.py  evaluate_judge.py  evaluate_model.py  evaluation_2gpu.ipynb  evaluation_csv_2gpu.ipynb  evaluation_detailed.csv  format-data.py  format_data.py  generate-cot.py  gpt-oss-(120B)_A100-Fine-tuning.ipynb  gpt52_first_pass.csv  gpt52_first_pass_detailed.csv  gpt52_judge.py  judge_predictions.py  judge_resolved_predictions.csv  llama.csv  llama.xlsx  openrouter_judge.py  (+11 more)
cot_data/: batch_input_chunk_0.jsonl  batch_input_chunk_1.jsonl  batch_input_chunk_10.jsonl  batch_input_chunk_11.jsonl  batch_input_chunk_12.jsonl  batch_input_chunk_13.jsonl  batch_input_chunk_14.jsonl  batch_input_chunk_15.jsonl  batch_input_chunk_16.jsonl  batch_input_chunk_17.jsonl  batch_input_chunk_18.jsonl  batch_input_chunk_19.jsonl  batch_input_chunk_2.jsonl  batch_input_chunk_20.jsonl  batch_input_chunk_21.jsonl  batch_input_chunk_22.jsonl  batch_input_chunk_23.jsonl  (+55 more)
(+4 files in other folders)
