[project]
name = "clarity-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "fastparquet>=2025.12.0",
    "huggingface-hub>=1.3.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.2",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.260113",
]
